--- a/.report/xaringan_presentation.html
+++ b/.report/xaringan_presentation.html
@@ -22,22 +22,23 @@ class: title-slide, center, middle
 
 # Simulation Study with Package Development
 
-2021-05-11
+2021-05-13
 
 ### Sooyong Lee | Educational Psychology | The University of Texas at Austin
 
 ---
 
 # Contents
-
+----
 - R package
 - git(hub)
 - 시뮬레이션 분석
 - 사용할 package
+  - `devtool`, `roxyzen2`
   - `tidyverse`
-      * `dplyr`, `tidyr`, `ggplot2`, `purrr`, `magrittr`
+      * `dplyr`, `tidyr`, `ggplot2`, `purrr`, `%&gt;%` from `magrittr`
   - `lavaan`
-  - `MASS`
+  - `mvrnorm` from `MASS`
 
 ---
 
@@ -154,11 +155,12 @@ lambda %*% pi %*% t(lambda) + theta
 .panelset[
 .panel[.panel-name[condition]
 
-- sample size
-- number of indicators per factor
-- covaraince between factors: 0, 0.5
+- sample size: **100, 500**
+- number of indicators per factor: **3, 6**
+- covaraince between factors: **0, 0.5**
   - cov = 0인 경우 유의하면 -&gt; type I error 
   - cov = 0.5인 경우 유의하면 -&gt; power
+- categorization: **3, 5, 7**
 - all other things are fixed
 
 ]
@@ -227,7 +229,7 @@ condition_list &lt;-
 
 .panel[.panel-name[data]
 
-- 조건에 맞게 `\(\Sigma\)` 가 생성해야야 함.
+- 조건에 맞게 `\(\Sigma\)` 가 생성해야 함.
 
 `$$\Sigma = Cov(X) = \Lambda \Phi \Lambda^T + \Theta$$`
 
@@ -299,17 +301,17 @@ gen.data &lt;- genData(
 .panel[.panel-name[result]
 
 ```
-##             X1         X2         X3         X4         X5         X6
-## 1  -1.15995040  0.6468361 -0.8832153  0.3807807  1.6451707  0.9197737
-## 2   0.18816688 -0.1078065  0.9959542  1.2927440  1.9310336  1.9962483
-## 3  -1.31600329 -0.8948682  0.1893923  0.6258151  0.8017407 -1.0724220
-## 4   0.72800989  1.4418928  0.6792771  1.6040397  2.9024642  1.4655133
-## 5   0.04600095  1.6564772  1.3851438 -2.9140832 -3.2934137 -3.5065877
-## 6  -0.12104437 -1.3477056 -3.0475593  0.9225972  0.7946894 -1.0018327
-## 7  -1.24436658 -1.2519496 -1.5242425  1.4403905  0.8147981  1.3339256
-## 8   0.30987102  0.9383184  0.3050334  1.5638723  0.3181447  0.9924479
-## 9   1.61024481  0.7015246  0.3016287  0.1824937  1.5559882  0.7472920
-## 10  1.34074835  1.7059755  2.2038406 -0.1134718  1.4400222  1.3630104
+##             X1           X2         X3          X4         X5         X6
+## 1   1.30166518  0.008967313 -0.3770648 -0.72636143 -0.2009002  0.6174657
+## 2   0.01515772  0.224622859 -0.7288095  0.97978768  1.2280858  0.8482463
+## 3  -0.27700968 -1.421595743 -0.1925472  0.08772653  0.3609336  0.0402174
+## 4   0.87641052  0.290077669  0.7030843  0.89341303  2.3424498  0.6410129
+## 5  -0.65254189  0.345921120  0.8545919  0.05856623 -1.1989873 -0.4465188
+## 6   2.20981584  0.690340593  1.1613299 -0.53140551  0.5589555 -0.3621907
+## 7  -0.24032737 -1.099941963 -0.3592069  1.60664934  1.0816259  1.3771719
+## 8   1.12591561  1.272108669  0.3008790 -2.51407518 -0.7369097 -1.0288743
+## 9   1.08219078  2.090282887  1.2418866  1.88628774  1.5004839 -1.0355935
+## 10  1.27730006  1.529302521  1.1589131 -0.07536825 -0.2090855 -0.4710454
 ```
 ]
 ]
@@ -355,30 +357,30 @@ cut3.data &lt;- dataCut(
 
 ```
 ##    X1 X2 X3 X4 X5 X6
-## 1   1  4  3  4  4  5
-## 2   3  3  4  5  5  5
-## 3   1  1  4  4  4  3
-## 4   4  5  4  5  5  5
-## 5   3  5  5  1  1  1
-## 6   3  1  1  5  4  3
-## 7   1  1  2  5  4  5
-## 8   3  4  4  5  3  5
-## 9   5  4  4  4  4  4
-## 10  5  5  5  4  4  5
+## 1   4  3  1  3  2  4
+## 2   2  3  1  4  4  4
+## 3   1  1  2  3  3  3
+## 4   3  3  4  4  5  4
+## 5   1  3  5  3  1  2
+## 6   5  4  5  3  3  2
+## 7   1  1  1  5  4  5
+## 8   4  4  3  1  1  1
+## 9   4  5  5  5  4  1
+## 10  4  5  5  3  2  2
 ```
 
 ```
 ##    X1 X2 X3 X4 X5 X6
-## 1   1  2  2  3  3  3
-## 2   2  2  3  3  3  3
-## 3   1  1  2  3  2  2
-## 4   3  3  3  3  3  3
-## 5   2  3  3  1  1  1
-## 6   2  1  1  3  2  2
+## 1   3  2  1  2  1  3
+## 2   1  2  1  3  3  3
+## 3   1  1  1  2  2  2
+## 4   2  2  3  3  3  3
+## 5   1  2  3  2  1  1
+## 6   3  2  3  2  2  1
 ## 7   1  1  1  3  2  3
-## 8   2  3  2  3  2  3
-## 9   3  3  2  3  3  3
-## 10  3  3  3  2  3  3
+## 8   2  3  2  1  1  1
+## 9   2  3  3  3  3  1
+## 10  3  3  3  2  1  1
 ```
 ]
 ]
@@ -427,7 +429,7 @@ summary(.fit, fit.measures=TRUE)
 ```
 
 ```
-## lavaan 0.6-8 ended normally after 22 iterations
+## lavaan 0.6-8 ended normally after 23 iterations
 ## 
 ##   Estimator                                         ML
 ##   Optimization method                           NLMINB
@@ -437,40 +439,40 @@ summary(.fit, fit.measures=TRUE)
 ##                                                       
 ## Model Test User Model:
 ##                                                       
-##   Test statistic                                13.957
+##   Test statistic                                12.238
 ##   Degrees of freedom                                 8
-##   P-value (Chi-square)                           0.083
+##   P-value (Chi-square)                           0.141
 ## 
 ## Model Test Baseline Model:
 ## 
-##   Test statistic                               484.121
+##   Test statistic                               445.576
 ##   Degrees of freedom                                15
 ##   P-value                                        0.000
 ## 
 ## User Model versus Baseline Model:
 ## 
-##   Comparative Fit Index (CFI)                    0.987
-##   Tucker-Lewis Index (TLI)                       0.976
+##   Comparative Fit Index (CFI)                    0.990
+##   Tucker-Lewis Index (TLI)                       0.982
 ## 
 ## Loglikelihood and Information Criteria:
 ## 
-##   Loglikelihood user model (H0)              -1224.115
-##   Loglikelihood unrestricted model (H1)      -1217.136
+##   Loglikelihood user model (H0)              -1226.934
+##   Loglikelihood unrestricted model (H1)      -1220.815
 ##                                                       
-##   Akaike (AIC)                                2474.230
-##   Bayesian (BIC)                              2513.368
-##   Sample-size adjusted Bayesian (BIC)         2472.225
+##   Akaike (AIC)                                2479.869
+##   Bayesian (BIC)                              2519.007
+##   Sample-size adjusted Bayesian (BIC)         2477.864
 ## 
 ## Root Mean Square Error of Approximation:
 ## 
-##   RMSEA                                          0.070
+##   RMSEA                                          0.059
 ##   90 Percent confidence interval - lower         0.000
-##   90 Percent confidence interval - upper         0.131
-##   P-value RMSEA &lt;= 0.05                          0.253
+##   90 Percent confidence interval - upper         0.122
+##   P-value RMSEA &lt;= 0.05                          0.353
 ## 
 ## Standardized Root Mean Square Residual:
 ## 
-##   SRMR                                           0.040
+##   SRMR                                           0.037
 ## 
 ## Parameter Estimates:
 ## 
@@ -482,28 +484,28 @@ summary(.fit, fit.measures=TRUE)
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
 ##   F1 =~                                               
 ##     X1                1.000                           
-##     X2                0.829    0.070   11.820    0.000
-##     X3                0.986    0.077   12.766    0.000
+##     X2                1.190    0.121    9.821    0.000
+##     X3                1.153    0.118    9.782    0.000
 ##   F2 =~                                               
 ##     X4                1.000                           
-##     X5                1.011    0.109    9.309    0.000
-##     X6                0.908    0.102    8.920    0.000
+##     X5                0.968    0.092   10.514    0.000
+##     X6                1.155    0.105   10.969    0.000
 ## 
 ## Covariances:
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
 ##   F1 ~~                                               
-##     F2                0.656    0.129    5.105    0.000
+##     F2                0.322    0.088    3.656    0.000
 ## 
 ## Variances:
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
-##    .X1                0.389    0.078    4.988    0.000
-##    .X2                0.463    0.070    6.594    0.000
-##    .X3                0.422    0.079    5.334    0.000
-##    .X4                0.643    0.105    6.146    0.000
-##    .X5                0.454    0.090    5.047    0.000
-##    .X6                0.542    0.087    6.207    0.000
-##     F1                1.280    0.198    6.464    0.000
-##     F2                0.954    0.184    5.181    0.000
+##    .X1                0.502    0.081    6.205    0.000
+##    .X2                0.506    0.098    5.148    0.000
+##    .X3                0.501    0.094    5.323    0.000
+##    .X4                0.348    0.069    5.034    0.000
+##    .X5                0.487    0.077    6.288    0.000
+##    .X6                0.503    0.095    5.291    0.000
+##     F1                0.797    0.149    5.333    0.000
+##     F2                0.894    0.149    6.011    0.000
 ```
 ]
 ]
@@ -558,7 +560,7 @@ analysis &lt;- function(.data) {
 .scroll-box-18[
 
 ```
-## lavaan 0.6-8 ended normally after 41 iterations
+## lavaan 0.6-8 ended normally after 32 iterations
 ## 
 ##   Estimator                                         ML
 ##   Optimization method                           NLMINB
@@ -568,40 +570,40 @@ analysis &lt;- function(.data) {
 ##                                                       
 ## Model Test User Model:
 ##                                                       
-##   Test statistic                                13.661
+##   Test statistic                                14.058
 ##   Degrees of freedom                                 8
-##   P-value (Chi-square)                           0.091
+##   P-value (Chi-square)                           0.080
 ## 
 ## Model Test Baseline Model:
 ## 
-##   Test statistic                                48.973
+##   Test statistic                                44.604
 ##   Degrees of freedom                                15
 ##   P-value                                        0.000
 ## 
 ## User Model versus Baseline Model:
 ## 
-##   Comparative Fit Index (CFI)                    0.833
-##   Tucker-Lewis Index (TLI)                       0.688
+##   Comparative Fit Index (CFI)                    0.795
+##   Tucker-Lewis Index (TLI)                       0.616
 ## 
 ## Loglikelihood and Information Criteria:
 ## 
-##   Loglikelihood user model (H0)                -82.689
-##   Loglikelihood unrestricted model (H1)        -75.859
+##   Loglikelihood user model (H0)                -88.327
+##   Loglikelihood unrestricted model (H1)        -81.298
 ##                                                       
-##   Akaike (AIC)                                 191.379
-##   Bayesian (BIC)                               195.312
-##   Sample-size adjusted Bayesian (BIC)          156.368
+##   Akaike (AIC)                                 202.654
+##   Bayesian (BIC)                               206.588
+##   Sample-size adjusted Bayesian (BIC)          167.643
 ## 
 ## Root Mean Square Error of Approximation:
 ## 
-##   RMSEA                                          0.266
+##   RMSEA                                          0.275
 ##   90 Percent confidence interval - lower         0.000
-##   90 Percent confidence interval - upper         0.500
-##   P-value RMSEA &lt;= 0.05                          0.101
+##   90 Percent confidence interval - upper         0.507
+##   P-value RMSEA &lt;= 0.05                          0.089
 ## 
 ## Standardized Root Mean Square Residual:
 ## 
-##   SRMR                                           0.166
+##   SRMR                                           0.211
 ## 
 ## Parameter Estimates:
 ## 
@@ -613,28 +615,28 @@ analysis &lt;- function(.data) {
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
 ##   F1 =~                                               
 ##     X1                1.000                           
-##     X2                1.734    0.877    1.979    0.048
-##     X3                1.139    0.591    1.928    0.054
+##     X2                1.453    0.632    2.298    0.022
+##     X3                1.029    0.472    2.181    0.029
 ##   F2 =~                                               
 ##     X4                1.000                           
-##     X5                0.573    0.207    2.760    0.006
-##     X6                0.684    0.252    2.714    0.007
+##     X5                1.296    0.522    2.483    0.013
+##     X6                0.800    0.434    1.841    0.066
 ## 
 ## Covariances:
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
 ##   F1 ~~                                               
-##     F2               -0.606    0.469   -1.294    0.196
+##     F2               -0.211    0.310   -0.682    0.495
 ## 
 ## Variances:
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
-##    .X1                1.353    0.650    2.083    0.037
-##    .X2                0.394    0.566    0.697    0.486
-##    .X3                0.485    0.322    1.508    0.132
-##    .X4               -0.332    0.336   -0.988    0.323
-##    .X5                0.605    0.274    2.207    0.027
-##    .X6                0.899    0.405    2.218    0.027
-##     F1                0.737    0.750    0.982    0.326
-##     F2                1.692    0.662    2.555    0.011
+##    .X1                1.040    0.560    1.858    0.063
+##    .X2               -0.456    0.705   -0.647    0.518
+##    .X3                1.849    0.884    2.091    0.036
+##    .X4                0.366    0.335    1.095    0.274
+##    .X5                0.224    0.499    0.448    0.654
+##    .X6                1.202    0.572    2.100    0.036
+##     F1                1.050    0.869    1.209    0.227
+##     F2                0.874    0.605    1.444    0.149
 ```
 ]
 ]
@@ -674,13 +676,13 @@ extracted &lt;- extractEst(.fit)
 
 ```
 ##     type    est pvalue
-## 1 F1=~X2  1.734  0.048
-## 2 F1=~X3  1.139  0.054
-## 3 F2=~X5  0.573  0.006
-## 4 F2=~X6  0.684  0.007
-## 5 F1~~F2 -0.606  0.196
-## 6 F1~~F1  0.737  0.326
-## 7 F2~~F2  1.692  0.011
+## 1 F1=~X2  1.453  0.022
+## 2 F1=~X3  1.029  0.029
+## 3 F2=~X5  1.296  0.013
+## 4 F2=~X6  0.800  0.066
+## 5 F1~~F2 -0.211  0.495
+## 6 F1~~F1  1.050  0.227
+## 7 F2~~F2  0.874  0.149
 ```
 ]
 ]
@@ -22982,8 +22984,8 @@ sim_result &lt;- runSimulation(condition_list)
 
 ## Power &amp; Type I error
 
-- when covariance = 0, the replications of being significant / total replication
-- when covariance = 0.5, the replications of being significant / total replication
+- Type I error: when covariance = 0, the replications of being significant / total replication
+- Power: when covariance = 0.5, the replications of being significant / total replication
 
 ]
 
